
2001-04-12  jeff b  <jeff@univrel.pr.uconn.edu>  

	Released 1.5pre6

2001-04-10  jeff b  <jeff@univrel.pr.uconn.edu>  

	* configure.in, acconfig.h, etc/afpd/uam.c: patch submitted by Jason
	Kelitz (jkeltz) to allow disabling of shell checking

	* configure.in, contrib/Makefile.am: made timelord compilation
	optional, disabled by default

2001-04-03  jeff b  <jeff@univrel.pr.uconn.edu>  

	* etc/afpd/file.c: merged patch from Soren Spies <sspies@apple.com>
	at Apple, fixing server disconnect problem upon afp_createid() call

2001-04-02  jeff b  <jeff@univrel.pr.uconn.edu>  

	* contrib/shell_utils/Makefile.am, contrib/shell_utils/cleanappledouble.pl:
	added cleanappledouble.pl script from Heath Kehoe <hakehoe@avalon.net>

2001-03-26  jeff b  <jeff@univrel.pr.uconn.edu>  

	* etc/afpd/quota.c: fix compile dbtob problem on Linux from Sam
	Noble <ns@shadow.org>

	* configure.in, etc/uams/Makefile.am, etc/uams/uams_krb4/Makefile.am:
	moved -shared into LDSHAREDFLAGS to fix Solaris build problems
	from Bob Rogers <rogers-netatalk-devel@rgrjr.dyndns.org> and
	Akop Pogosian <akopps@csua.berkeley.edu>

2001-03-22  Lance Levsen  <lance.l@dontspam.home.com>

	* etc/uams/Makefile.am: Added $LDFLAGS to fix broken compile due
	to inability to find libcrypto. libcrypto is defined in LDFLAGS as
	"-L$ssldir/lib" in configure.

2001-03-22 12:57 EST  jeff b  <jeff@univrel.pr.uconn.edu>  

	* configure.in: patch for OpenBSD compile reported by Jean-Phillipe
	Rey <jprey@ads.ecp.fr>

2001-03-21 09:35 EST  jeff b  <jeff@univrel.pr.uconn.edu>  

	* etc/afpd/ofork.c, include/atalk/adouble.h, libatalk/adouble/ad_open.c:
	patch from Jonathan Paisley (jonp@chem.gla.ac.uk)

2001-03-14 13:30 EST  jeff b  <jeff@univrel.pr.uconn.edu>  

	* configure.in: patch from Yoshinobu Ishizaki to fix problems with
	Linux 2.0.x builds (Patch #408256)

	* etc/afpd/file.c: used patch at http://www.avalon.net/~hakehoe/
	to fix deleting/emptying trash problems (Patch #408218)
